--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
+<h1>Sobre a Barbearia Alura</h1>
 
-<H1>Sobre a Barbearia Alura</H1>
+<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba.</p>
 
-<p>Localizada no coração da cidade a Barbearia Alura traz para o mercado o que há de melhor para o seu cabelo e barba.</p>
-<p> Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
-<p>Nossa missão é: "Proporcionar auto-estima e qualidade de vida aos clientes".</p>
-<p>profissionais experientes e antenados às mudanças no mundo da moda.O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+<p>Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+
+<p><em><strong>Nossa missão é: "Proporcionar auto-estima e qualidade de vida aos clientes".</stong></em></p>
+
+<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
